--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring-example-server
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
 
+spring.freemarker.expose-request-attributes=true
+spring.freemarker.suffix= .ftl
