--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-
 spring.freemarker.expose-request-attributes=true
-spring.freemarker.suffix= .ftl
+spring.freemarker.suffix=.ftl
+upload.path=/C:/Users/ZVER3D/Desktop/Java/my-spring-project/my-project/uploads
