--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.jpa.generate-ddl=true
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.suffix=.ftl
 upload.path=/C:/Users/ZVER3D/Desktop/Java/my-spring-project/my-project/uploads
+spring.mail.host=smtp.yandex.ru
+spring.mail.username=ivan-aka-zver3d@ya.ru
+spring.mail.password=emtmvqodtamhwvcu
+spring.mail.port=465
+spring.mail.protocol=smtps
+mail.debug=true
