--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/spring-example-server
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=validate
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.suffix=.ftl
-upload.path=/C:/Users/ZVER3D/Desktop/Java/my-spring-project/my-project/uploads
 spring.mail.host=smtp.yandex.ru
 spring.mail.username=ivan-aka-zver3d@ya.ru
 spring.mail.password=emtmvqodtamhwvcu
 spring.mail.port=465
 spring.mail.protocol=smtps
+upload.path=/C:/Users/ZVER3D/Desktop/Java/my-spring-project/my-project/uploads
 mail.debug=true
