Add remember me, hCaptcha, deploy ready

--- a/src/main/resources/application.dev.properties
+++ b/src/main/resources/application.dev.properties
@@ -13,7 +13,8 @@ spring.mail.port=465
 spring.mail.protocol=smtps
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
-hostname=127.0.0.1
 upload.path=/C:/Users/ZVER3D/Desktop/Java/my-spring-project/my-project/uploads
-mail.debug=false
+mail.debug=true
 hcaptcha.secret=0x868dC45440EF949756Bd2eb760647411B9634Cf5
+hostname=localhost:8080
+server.port=8080
